hid image on mobile fixed button

--- a/css/style.css
+++ b/css/style.css
@@ -905,6 +905,12 @@ textarea.form-control {
 
 }
 
+@media (max-width:629px) {
+  img#optionalstuff {
+    display: none;
+  }
+}
+
 .topSocial{
   color:rgba(94,94,94,1);
   align:center;
